--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,20 +9,14 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
-    <service android:name=".MusicServer"
-        tools:ignore="WrongManifestParent">
-        <intent-filter>
-            <action android:name="com.angel.Android.MUSIC"/>
-            <category android:name="android.intent.category.default" />
-        </intent-filter>
-    </service>
-
 
 </manifest>
